--- a/package.json
+++ b/package.json
@@ -18,6 +18,11 @@
     "@angular/platform-browser": "^18.2.0",
     "@angular/platform-browser-dynamic": "^18.2.0",
     "@angular/router": "^18.2.0",
+    "@types/leaflet": "^1.9.12",
+    "jqwidgets-ng": "^19.2.2",
+    "leaflet": "^1.9.4",
+    "mapbox-gl": "^3.6.0",
+    "ol": "^10.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.10"
